--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -6,11 +6,12 @@
 
 .md-typeset h1{
     font-weight: 400;
+    margin-top: 1.5rem;
 }
 
-.md-typeset a {
+/* .md-typeset a {
     color: #29a5df !important;
-}
+} */
 
 .md-typeset h2+h3 {
     margin-top: 2rem;
@@ -43,4 +44,71 @@
 
   .md-content__inner {
       margin-bottom: 6em;
+ 
   }
+
+
+  .md-main__inner{
+      padding-top: 0;
+  }
+
+  @media only screen and (min-width: 1220px) {
+    .md-sidebar{
+        padding-top: 3rem;
+    }
+
+
+    .md-sidebar--primary  .md-nav__link--active, .md-sidebar--primary  [data-md-color-primary=red] .md-nav__link:active {
+        color: #ef5350;
+        border: 1px solid transparent;
+        cursor: pointer;
+        display: flex;
+        padding: 7px 24px 7px 16px;
+        position: relative;
+        align-items: center;
+        border-color: #E6ECF1 !important;
+        border-right: 0;
+        text-decoration: none;
+        background-color: #FFFFFF;
+        -webkit-box-align: center;
+    }
+
+    .md-sidebar--primary .md-nav__link{
+        font-weight: 800;
+        padding: 7px 24px 7px 16px;
+        line-height: 2em;
+    }
+
+    .md-sidebar--primary{
+        background-color: #F5F7F9;
+        border-right: 1px solid #E6ECF1;
+    }
+
+    .md-sidebar--primary .md-sidebar__scrollwrap {
+        margin: 0;
+    }
+
+    .md-sidebar--primary .md-nav__item {
+        padding: 0;
+        padding-left: .6rem;
+    }
+
+    .md-sidebar--primary .md-nav__link:hover{
+        background: rgb(230,237,240);
+        color:inherit;
+    }
+
+    .md-nav__title{
+        padding-bottom: 2em;
+        font-size: 18px;
+        color: gray;
+    }
+
+}
+
+@media only screen and (min-width: 960px) {
+    .md-nav--secondary{
+        border-left: 1px solid #E6ECF1;
+        padding-left: 20px;
+    }
+}
