--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -55,7 +55,12 @@
   p{
     font-size: 16px;
     color:#3b454e;
+    padding-bottom: 20px ;
   }
+
+  /* img{
+      padding: 20px 0;
+  } */
 
   @media only screen and (min-width: 1220px) {
     
