--- a/site/stylesheets/style.css
+++ b/site/stylesheets/style.css
@@ -65,6 +65,10 @@
     padding-bottom: 0;
   }
 
+  blockquote p{
+    padding-bottom: 0;
+  }
+
 
   @media only screen and (min-width: 1220px) {
     
